test_suite5/ALAN/test_suite/alan-2022-examples/failing/001560_mutation.alan
source E273 begin call N7(206, while 5 do relax end) end
